--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon -L"
+    "start": "node ./index.js",
+    "dev": "nodemon -L"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,8 @@
     "nodemon": "2.0.20"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
