--- a/api/package.json
+++ b/api/package.json
@@ -3,16 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "node ./index.js",
-    "dev": "nodemon -L"
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "2.0.20"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/morgan": "^1.9.4",
+    "nodemon": "2.0.20",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "cors": "^2.8.5",
