--- a/api/package.json
+++ b/api/package.json
@@ -15,13 +15,17 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/morgan": "^1.9.4",
+    "dotenv": "^16.0.3",
     "nodemon": "2.0.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^10.0.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
     "ts-node": "^10.9.1"
   }
