--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node index.ts",
+    "start": "npx nodemon index.ts",
     "dev": "ts-node-dev --respawn index.ts"
   },
   "keywords": [],
