feat(Models and Routes): :sparkles: Category model and routes category created

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "conventionalCommits.scopes": ["Models ", "Routes"]
+  "conventionalCommits.scopes": [
+    "Models ",
+    "Routes",
+    "Models and Routes"
+  ]
 }
