fix(Models and Routes): :bug: fix Role Models and Routes index

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "conventionalCommits.scopes": [
     "Models ",
     "Routes",
-    "add roles"
+    "add roles",
+    "Models and Routes"
   ]
 }
