--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.12.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2"
   },
