feat(mercadopago): :sparkles: purchases post mp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
     "add roles",
     "Models and Routes",
     "Components",
-    "Styles","Models and Routes",
-    "filters"
+    "Styles",
+    "Models and Routes",
+    "filters",
+    "mercadopago"
   ]
 }
