--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^10.0.0",
+    "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
