feat(comments): :sparkles: merge dev branch and comments branch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
     "Reducer",
     "mercadopago",
     "comments and styles",
-    "news"
+    "news",
+    "merge dev branch and comments branch",
+    "comments"
   ]
 }
