style(Home): :art: merge dev branch and styles-home branch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "comments and styles",
     "news",
     "merge dev branch and comments branch",
-    "comments"
+    "comments",
+    "Home"
   ]
 }
