--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,10 @@
     "@splidejs/react-splide": "^0.7.12",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
+    "ra-data-json-server": "^4.7.0",
+    "ra-data-simple-rest": "^4.7.0",
     "react": "^18.2.0",
+    "react-admin": "^4.7.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.6.2",
