feat(shop view): :sparkles: Shop View

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
     "comments and styles",
     "news",
     "merge dev branch and comments branch",
-    "comments"
+    "comments",
+    "ShopView",
+    "shop view"
   ]
 }
