style(Shoppin Cart): :art: Style for Shopping cart

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "merge dev branch and comments branch",
     "ShopView",
     "Nav",
-    "checkout form"
+    "checkout form",
+    "Shoppin Cart"
   ]
 }
