--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.15",
     "@types/mercadopago": "^1.5.8",
     "@types/morgan": "^1.9.4",
+    "@types/nodemailer": "^6.4.7",
     "dotenv": "^16.0.3",
     "nodemon": "2.0.20",
     "ts-node-dev": "^2.0.0",
@@ -30,6 +31,7 @@
     "mercadopago": "^1.5.14",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.0",
     "ts-node": "^10.9.1"
   }
 }
