feat(nodemailer & mercadopago): :sparkles: email notification payment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "Nav",
     "checkout form",
     "NodeMailer",
-    "Shoppin Cart"
+    "Shoppin Cart",
+    "nodemailer & mercadopago"
   ]
 }
