--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router": "^6.6.2",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "sweetalert2": "^11.7.1"
   },
   "devDependencies": {
     "@types/auth0-js": "^9.14.7",
