--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "ra-data-json-server": "^4.7.0",
     "ra-data-simple-rest": "^4.7.0",
     "react": "^18.2.0",
