--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/auth0-js": "^9.14.7",
