style(Routes): :sparkles: Added route 404 on invalid path

--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-admin": "^4.7.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
@@ -43,6 +44,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-lottie": "^1.2.6",
     "@types/react-slick": "^0.23.10",
     "@vitejs/plugin-react-swc": "^3.0.1",
     "sass": "^1.57.1",
