--- a/client/package.json
+++ b/client/package.json
@@ -36,9 +36,10 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
+    "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
-    "sweetalert2": "^11.7.1"
+    "sweetalert2": "^11.4.8"
   },
   "devDependencies": {
     "@types/auth0-js": "^9.14.7",
