--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^6.6.2",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
+    "recharts": "^2.3.2",
     "sweetalert2": "^11.7.1"
   },
   "devDependencies": {
